# arc_drawing

./: .gitignore  Cargo.toml  LICENSE-Apache-2.0  LICENSE-MIT  README.md  arc_test.7z  testcov.sh
.cargo/: config.toml
benches/: arc.rs  arc_bench.rs  basics_bench.rs  misc.rs  old_code.rs
notes/: quadrants.txt
src/: aa.rs  aa_arc.rs  angle.rs  annulus.rs  antialias.rs  arc.rs  arc2.rs  arc3.rs  basics.rs  bres.rs  conics.rs  draw.rs  fp.rs  lib.rs  lines.rs  main.rs  main.rs.bak  mp.rs  ops.rs  pt.rs  shapes.rs  test.rs  test_consts.rs  translate.rs
src/aa/: arc.rs  cir_arc.rs  ellipse_arc.rs  end.rs
src/aa_arc/: aa_oct.rs
src/annulus/: pos.rs  translate.rs
src/arc/: bounds.rs  translate.rs
src/basics/: alpha.rs  blend.rs  dashed.rs  shapes.rs  straight.rs
src/bres/: octs.rs
src/conics/: aa_arc.rs  annulus.rs  arc.rs  cir.rs  ellipse_arc.rs
src/conics/aa_arc/: end.rs
src/conics/annulus/: edges.rs  pos.rs
src/conics/arc/: bounds.rs  edge.rs  pos.rs
src/lines/: aa.rs  bres.rs  diagonal.rs  horizontal.rs  straight.rs  thick.rs  vertical.rs
src/lines/thick/: slopes.rs
src/ops/: blend.rs
src/shapes/: rect.rs
src/test/: arc2.rs  consts.rs  img.rs
tests/: basic_drawing.rs
