[package]
name = "freehand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false

[dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }

[dev-dependencies]
imageproc = "0.23"
criterion = { version = "0.4", features = ["html_reports"] }
env_logger = "0.9"
log = "0.4"

[profile.release]
debug = 1

# [[bench]]
# name = "arc_bench"
# harness = false

[[bench]]
name = "basics_bench"
harness = false
