[package]
name = "freehand"
version = "0.1.0"
edition = "2021"
# 1.61 needed to mark const functions
rust-version = "1.61.0"
authors = ["Andrew Prindle"]
repository = "https://github.com/vishusandy/freehand"
description = "Basic drawing functions for use with the Image crate"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["graphics", "gamedev", "image"]
categories = ["graphics", "game-development"]
exclude = [".cargo/config.toml", "testcov.sh", ".vscode/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false

[dependencies]
# image = { version = "0.24", default-features = false, features = ["png"] }
image = { version = "0.24" }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
imageproc = "0.23"
criterion = { version = "0.4", features = ["html_reports"] }
env_logger = "0.10.0"
log = "0.4"

[features]
default = []
serde = ["dep:serde"]

[profile.release]
debug = 1

[[bench]]
path = "benches/arc_bench.rs"
name = "arcs"
harness = false

[[bench]]
path = "benches/basics_bench.rs"
name = "basics"
harness = false
